<resources>
    <string name="app_name">NovaThor Settings</string>
    <string name="image">Thumbnail</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_value">Invalid value entered! Please re-enter a value</string>
    <string name="about_title">TeamCanjica\nNovaThor Settings</string>
    <string name="otg_subcat_title">USB OTG Settings</string>
    <string name="otg_power_title_head">USB-VBUS Power</string>
    <string name="otg_power_summary_head">Enables output voltage to the USB port</string>
    <string name="cc_subcat_title">Charger control</string>
    <string name="use_cc_title_head">Use Charger Control</string>
    <string name="use_cc_summary_head">Enables Charger Control</string>
    <string name="cc_title_head">Charger currency</string>
    <string name="cc_summary_head">Charger currency in mA, low levels protect battery but takes longer to charge, high levels may damage battery life</string>
    <string name="ccc_subcat_title">Cycle Charging</string>
    <string name="use_ccc_title_head">Control Cycle Charging</string>
    <string name="use_ccc_summary_head">Enables Cycle Charging Control</string>
    <string name="dt_title_head">Discharging threshold</string>
    <string name="dt_summary_head">After this level is reached phone will start discharging.</string>
    <string name="dt_dialog_message">Select end battery level of charging</string>
    <string name="rt_title_head">Recharging threshold</string>
    <string name="rt_summary_head">After this level is reached phone will start charging again. <b>Note: Recharging threshold must be lower than discharging threshold!</b> </string>
    <string name="rt_dialog_message">Select recharging battery level</string>
    <string name="eoc_subcat_title">Charge status</string>
    <string name="eoc_title_head">End of charge</string>
    <string name="eoc_summary_head">Check real charge status</string>
    <string name="deepsleep_subcat_title">Deep Sleep</string>
    <string name="deepest_sleep_title_head">Deepest sleep state</string>
    <string name="deepest_sleep_summary_head">Specify the highest deep sleep level</string>
    <string name="refresh_bs_subcat_title">Battery stats</string>
    <string name="refresh_bs_title_head">Refresh battery stats</string>
    <string name="headsetgain_subcat_title">Headset Gain</string>
    <string name="gain_control_summary_head">Adjust the amount of gain, the lower the value, the greater the gain.</string>
    <string name="gain1_control_summary_head">Adjust the amount of gain, the greater the value, the greater the gain.</string>
    <string name="enable_anagain3_title_head">AnaGain3</string>
    <string name="enable_anagain3_summary_head">Enable headset analog gain path.</string>
    <string name="anagain3_control_title_head">AnaGain3 Gain Control</string>
    <string name="anagain3_control_dialog_message">Select the amount of volume gain for AnaGain3. Default:0</string>
    <string name="enable_hsldiggain_title_head">HsLDigGain</string>
    <string name="enable_hsldiggain_summary_head">Enable headset left digital path gain.</string>
    <string name="hsldiggain_control_title_head">HsLDigGain Gain Control</string>
    <string name="hsldiggain_control_dialog_message">Select the amount of volume gain for HsLDigGain. Default:4</string>
    <string name="enable_hsrdiggain_title_head">HsRDigGain</string>
    <string name="enable_hsrdiggain_summary_head">Enable headset right digital path gain.</string>
    <string name="hsrdiggain_control_title_head">HsRDigGain Gain Control</string>
    <string name="hsrdiggain_control_dialog_message">Select the amount of volume gain for HsRDigGain. Default:4</string>
    <string name="miscgain_subcat_title">Misc Gain</string>
    <string name="enable_addiggain2_title_head">ADDigGain2</string>
    <string name="enable_addiggain2_summary_head">Enable phone microphone digital path gain.</string>
    <string name="addiggain2_control_title_head">ADDigGain2 Gain Control</string>
    <string name="addiggain2_control_dialog_message">Select the amount of volume gain for ADDigGain2. Default:25</string>
    <string name="enable_eardiggain_title_head">EarDigGain</string>
    <string name="enable_eardiggain_summary_head">Enable earpiece digital path gain.</string>
    <string name="eardiggain_control_title_head">EarDigGain Gain Control</string>
    <string name="eardiggain_control_dialog_message">Select the amount of volume gain for EarDigGain. Default:4</string>
    <string name="enable_classdhpg_title_head">ClassDHPG</string>
    <string name="enable_classdhpg_summary_head">Enable ClassD amplifier high-pass gain.</string>
    <string name="classdhpg_control_title_head">ClassDHPG Gain Control</string>
    <string name="classdhpg_control_dialog_message">Select the amount of volume gain for ClassDHPG. Default:10</string>
    <string name="powermodes_subcat_title">Power Modes</string>
    <string name="enable_lpa_mode_title_head">LPA Mode</string>
    <string name="enable_lpa_mode_summary_head">Enables Lower-power Audio mode.</string>
    <string name="lpa_mode_control_title_head">LPA Mode Control</string>
    <string name="lpa_mode_control_summary_head">Adjust the vape voltage used in LPA mode.</string>
    <string name="lpa_mode_control_dialog_message">Adjust the vape voltage. Default:22</string>
    <string name="use_chargepump_title_head">Headset Charge Pump</string>
    <string name="use_chargepump_summary_head">Enable charge pump to use dynamic voltage supply, lower power cost.\nLeave disabled if you want to use fixed 1.8V supply.</string>
    <string name="enable_hslowpow_title_head">Enable HsLowPow</string>
    <string name="enable_hslowpow_summary_head">Enable the Hs low powered mode to use less power but have lower quality audio.</string>
    <string name="enable_hsdaclowpow_title_head">Enable HsDacLowPow</string>
    <string name="enable_hsdaclowpow_summary_head">Enable the HsDac low powered mode to use less power but have lower quality audio.</string>
    <string name="miscellaneous_subcat_title">Miscellaneous</string>
    <string name="enable_hshpen_title_head">Enable HsHpEn</string>
    <string name="enable_hshpen_summary_head">Enable the HsHpEn high pass filter to reduce sub-noise.</string>
    <string name="enable_classdwg_title_head">ClassDDithWGain</string>
    <string name="enable_classdwg_summary_head">Enable control for the white component of dithering filter.</string>
    <string name="classdwg_control_title_head">ClassDDithWGain Gain Control</string>
    <string name="classdwg_control_dialog_message">Select the amount of volume gain for ClassDDithWGain. Default:10</string>
    <string name="touchscreen_subcat_title">Touchscreen</string>
    <string name="use_2tap2wake_title_head">2Tap2Wake</string>
    <string name="use_2tap2wake_summary_head">Wake device with double tap on screen.</string>
    <string name="dt2w_timeout_title_head">2Tap2Wake Timeout</string>
    <string name="dt2w_timeout_summary_head">Set maximum delay between 2 taps to unlock device in ms</string>
    <string name="use_sweep2wake_title_head">Sweep2Wake</string>
    <string name="use_sweep2wake_summary_head">Unlock device with a swipe.\nSet x and y axis threshold to 0 for enabling Touch2Wake.</string>
    <string name="x_sweep2wake_title_head">S2W Threshold X</string>
    <string name="x_sweep2wake_summary_head">Tweak the x-axis threshold value of swiping. Default:120</string>
    <string name="y_sweep2wake_title_head">S2W Threshold Y</string>
    <string name="y_sweep2wake_summary_head">Tweak the y-axis threshold value of swiping. Default:240</string>
    <string name="touchscreen_sensitivity_title_head">Touch sensitivity</string>
    <string name="touchscreen_sensitivity_summary_head">Set touch panel sensitivity</string>
    <string name="screen_visual_subcat_title">Visual</string>
    <string name="panel_gamma_title_head">Screen Gamma</string>
    <string name="panel_gamma_summary_head">Set screen gamma value</string>
    <string name="min_brightness_title_head">Minimum Brightness</string>
    <string name="min_brightness_summary_head">Adjust the minimum brightness of the brightness slider.</string>
    <string name="min_brightness_dialog_message">Adjust the minimum brightness.</string>
    <string name="fsync_subcat_title">FSync</string>
    <string name="fsync_title_head">FSync Mode</string>
    <string name="fsync_summary_head">Disabling fsync can improve IO performance, but it may cause data corruption. Dynamic fsync will sync all buffers when screen turns off.</string>
    <string name="emulator_subcat_title">Emulator</string>
    <string name="screenoff_title_head">Turn Screen Off</string>
    <string name="screenoff_summary_head">Turn your screen off using an emulated button press.</string>
    <string name="powermenu_title_head">Activate Power Menu</string>
    <string name="powermenu_summary_head">Activate the power menu using an emulated button press.</string>
    <string name="mmc_subcat_title">MMC</string>
    <string name="use_spi_crc_title_head">Disable SPI CRC</string>
    <string name="use_spi_crc_summary_head">Disabling SPI CRC can improve mmc performance (10% - 30%) but phone may freeze randomly</string>
    <string name="scheduler_subcat_title">Scheduler</string>
    <string name="sched_mc_title_head">Multicore Power Saving</string>
    <string name="sched_mc_summary_head">Try to group tasks into the least cores possible to have hotplug-like powersavings.</string>
    <string name="readaheadkb_dialog_message">Select the readahead buffer size. Default:512kB</string>
    <string name="readaheadkb_title_head">Readahead buffer size</string>
    <string name="readaheadkb_summary_head">Readahead kB will affect SD R/W performance.</string>
    <string name="boottime_subcat_title">Boot time</string>
    <string name="boottime_summary_head">Check your total boot time.</string>
    <string name="boottime_title_head">Boot Time Check</string>
    <string name="storage_subcat_title">Storage</string>
    <string name="switch_storage_title_head">Swap Storages</string>
    <string name="switch_storage_summary_head">Switches internal storage partition with external sd-card. Reboot required.</string>
    <string name="backlight_subcat_title">Backlight</string>
    <string name="disable_bln_title_head">Disable BLN</string>
    <string name="disable_bln_summary_head">You won\'t be able to be notified of notifications through your backlight if BLN is disabled.</string>
    <string name="torch_subcat_title">Torch</string>
    <string name="burning_led_title_head">Burning LED</string>
    <string name="burning_led_summary_head">Burning LED mode for assistive light.\nWARNING: Turning this on for a long time will heat up your device, be careful!</string>
    <string name="voltages_subcat_title">Voltages</string>
    <string name="cpu_voltage_title_head">CPU Voltages</string>
    <string name="cpu_voltage_summary_head">Adjust the universal CPU voltages. <b>BEWARE! Too HIGH or too LOW voltages may cause reboots!</b></string>
    <string name="cpu_voltage_dialog_message">Adjust the voltage change.</string>
    <string name="enable_voltage_title_head">Voltage on more steps</string>
    <string name="enable_voltage_summary_head">Enable setting voltage for step04 and step05 on janice and step04 on codina. BEWARE! These steps may be unstable.</string>
    <string name="accelerometer_subcat_title">Accelerometer</string>
    <string name="use_accelerometer_calibration_title_head">Use calibration data</string>
    <string name="use_accelerometer_calibration_summary_head">Use the accelerometer calibration values. Do a calibration after checking this!</string>
    <string name="calibrate_accelerometer_title_head">Calibrate</string>
    <string name="calibrate_accelerometer_summary_head">Put your phone on a flat surface, and press this to calibrate</string>
</resources>