<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:teamcanjica="http://schemas.android.com/apk/res/com.teamcanjica.settings.device" >

    <PreferenceCategory android:title="@string/touchscreen_subcat_title"
        android:key="touchscreen" >
        <!-- Enable 2Tap2Wake -->
        <CheckBoxPreference
            android:key="use_2tap2wake"
            android:summary="@string/use_2tap2wake_summary_head"
            android:title="@string/use_2tap2wake_title_head" />
        <!-- 2Tap2Wake timeout -->
        <com.teamcanjica.settings.device.MasterEditTextPreference
            android:key="dt2w_timeout"
            android:summary="@string/dt2w_timeout_summary_head"
            android:title="@string/dt2w_timeout_title_head"
            android:digits="0123456789"
            android:inputType="number"
            android:defaultValue="250" />
        <!-- Enable Sweep2Wake -->
        <CheckBoxPreference
            android:key="use_sweep2wake"
            android:summary="@string/use_sweep2wake_summary_head"
            android:title="@string/use_sweep2wake_title_head" />
        <!-- Adjust Sweep2Wake x threshold -->
        <com.teamcanjica.settings.device.MasterEditTextPreference
            android:key="x_sweep2wake"
            android:summary="@string/x_sweep2wake_summary_head"
            android:title="@string/x_sweep2wake_title_head"
            android:digits="0123456789"
            android:inputType="number"
            android:defaultValue="120" />
        <!-- Adjust Sweep2Wake y threshold -->
        <com.teamcanjica.settings.device.MasterEditTextPreference
            android:key="y_sweep2wake"
            android:summary="@string/y_sweep2wake_summary_head"
            android:title="@string/y_sweep2wake_title_head"
            android:digits="0123456789"
            android:inputType="number"
            android:defaultValue="240" />
        <!-- Adjust touchscreen sensitivity -->
        <com.teamcanjica.settings.device.MasterListPreference
            android:defaultValue="val=17"
            android:entries="@array/touchscreen_sensitivity_entries"
            android:entryValues="@array/touchscreen_sensitivity_entries_values"
            android:key="touchscreen_sensitivity"
            android:summary="@string/touchscreen_sensitivity_summary_head"
            android:title="@string/touchscreen_sensitivity_title_head" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/screen_visual_subcat_title"
        android:key="screen_visual" >
        <!-- Adjust panel gamma -->
        <com.teamcanjica.settings.device.MasterListPreference
            android:defaultValue="0"
            android:entries="@array/panel_gamma_entries"
            android:entryValues="@array/panel_gamma_entries_values"
            android:key="panel_gamma"
            android:summary="@string/panel_gamma_summary_head"
            android:title="@string/panel_gamma_title_head" />
        <!-- Minimum Brightness -->
        <com.teamcanjica.settings.device.MasterSeekBarDialogPreference
            android:key="min_brightness"
            android:title="@string/min_brightness_title_head"
            android:summary="@string/min_brightness_summary_head"
            android:dialogMessage="@string/min_brightness_dialog_message"
            android:defaultValue="1"
            android:max="10"
            teamcanjica:min="1" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/fsync_subcat_title"
        android:key="fsync_cat" >
        <!-- Switch fsync mode -->
        <com.teamcanjica.settings.device.MasterListPreference
            android:defaultValue="0"
            android:entries="@array/fsync_mode_entries"
            android:entryValues="@array/fsync_mode_entries_values"
            android:key="fsync_mode"
            android:summary="@string/fsync_summary_head"
            android:title="@string/fsync_title_head" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/emulator_subcat_title">
        <!-- Turn Screen Off -->
        <Preference
            android:title="@string/screenoff_title_head"
            android:summary="@string/screenoff_summary_head"
            android:key="screen_off" />
        
        <!-- Activate Power Menu -->
        <Preference
            android:title="@string/powermenu_title_head"
            android:summary="@string/powermenu_summary_head"
            android:key="power_menu" />
    </PreferenceCategory>

</PreferenceScreen>
