<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:teamcanjica="http://schemas.android.com/apk/res/com.teamcanjica.settings.device">

    <PreferenceCategory android:title="@string/mmc_subcat_title" >
        <!-- SPI CRC -->
        <CheckBoxPreference
            android:key="use_spi_crc"
            android:summary="@string/use_spi_crc_summary_head"
            android:title="@string/use_spi_crc_title_head" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/scheduler_subcat_title" >
        <!-- Sched MC -->
        <com.teamcanjica.settings.device.MasterListPreference
            android:defaultValue="0"
            android:entries="@array/sched_mc_entries"
            android:entryValues="@array/sched_mc_entries_values"
            android:key="sched_mc"
            android:summary="@string/sched_mc_summary_head"
            android:title="@string/sched_mc_title_head" />
        <!-- Readahead kB -->
        <com.teamcanjica.settings.device.MasterSeekBarDialogPreference
           android:defaultValue="512"
           android:dialogMessage="@string/readaheadkb_dialog_message"
           android:max="4096"
           teamcanjica:min="128"
           teamcanjica:progressTextSuffix="kB"
           teamcanjica:stepSize="128"
           android:key="readaheadkb"
           android:title="@string/readaheadkb_title_head"
           android:summary="@string/readaheadkb_summary_head" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/boottime_subcat_title" >
        <!-- Boottime -->
        <Preference
            android:key="boottime"
            android:summary="@string/boottime_summary_head"
            android:title="@string/boottime_title_head" />
    </PreferenceCategory>
</PreferenceScreen>
